--- a/linux_os/guide/services/ssh/ssh_server/sshd_use_approved_macs/ansible/shared.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_use_approved_macs/ansible/shared.yml
@@ -5,4 +5,4 @@
 # disruption = low
 - (xccdf-var sshd_approved_macs)
 
-{{{ ansible_sshd_set(parameter="MACs", value="{{ sshd_approved_macs }}") }}}
+{{{ ansible_sshd_set(parameter="MAC", value="{{ sshd_approved_macs }}") }}}
